change queue_next to queue-next
Same reason as previous commit

--- a/us.johnholbrook.vextm.sdPlugin/manifest.json
+++ b/us.johnholbrook.vextm.sdPlugin/manifest.json
@@ -40,7 +40,7 @@
         },
         {
             "Name": "Queue Next Match",
-            "UUID": "us.johnholbrook.vextm.queue_next",
+            "UUID": "us.johnholbrook.vextm.queue-next",
             "Icon": "images/queue_next",
             "States": [{
                 "Image": "images/queue_next"
