Distribute plugin as .streamDeckPlugin file

--- a/us.johnholbrook.vextm.sdPlugin/manifest.json
+++ b/us.johnholbrook.vextm.sdPlugin/manifest.json
@@ -1,8 +1,7 @@
 {
     "SDKVersion": 2,
     "Author": "John Holbrook",
-    "CodePath": "plugin_node/main-win.exe",
-    "CodePathMac": "plugin_node/main-macos",
+    "CodePath": "./plugin_node/main-win.exe",
     "PropertyInspectorPath": "pi/pi.html",
     "Description": "Plugin for controlling VEX Tournament Manager",
     "Name": "VEX Tournament Manager",
@@ -15,10 +14,6 @@
         {
             "Platform": "windows",
             "MinimumVersion": "10"
-        },
-        {
-            "Platform": "mac",
-            "MinimumVersion": "10.11"
         }
     ],
     "Software": {
