--- a/us.johnholbrook.vextm.sdPlugin/plugin_node/package.json
+++ b/us.johnholbrook.vextm.sdPlugin/plugin_node/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "pkg -t node16-win main.js -o main-win.exe"
+    "build": "pkg -t node16-win main.js -o main-win.exe && pkg -t node16-macos main.js -o main-mac"
   },
   "author": "John Holbrook",
   "license": "ISC",
