Higher-resolution icon for stream deck store

--- a/us.johnholbrook.vextm.sdPlugin/manifest.json
+++ b/us.johnholbrook.vextm.sdPlugin/manifest.json
@@ -10,7 +10,7 @@
     "Category": "VEX TM",
     "CategoryIcon": "images/category_icon",
     "URL": "https://github.com/johnholbrook/streamdeck-vextm",
-    "Icon": "images/category_icon",
+    "Icon": "images/store_icon",
     "OS": [
         {
             "Platform": "windows",
