--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ dist/
 *.streamDeckPlugin
 us.johnholbrook.vextm.sdPlugin/plugin_node/main-mac
 us.johnholbrook.vextm.sdPlugin/plugin_node/main-win.exe
+us.johnholbrook.vextm.sdPlugin/plugin_node/auth.json
