--- a/us.johnholbrook.vextm.sdPlugin/plugin_node/package.json
+++ b/us.johnholbrook.vextm.sdPlugin/plugin_node/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "pkg -t node16-win main.js -o main-win.exe && pkg -t node16-macos main.js -o main-mac"
+    "build": "pkg -t node18-win main.js -o main-win.exe && pkg -t node18-macos main.js -o main-mac"
   },
   "author": "John Holbrook",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "protobufjs": "^7.2.4",
+    "vex-tm-client": "^1.4.0",
     "ws": "^8.3.0"
   }
 }
