--- a/us.johnholbrook.vextm.sdPlugin/manifest.json
+++ b/us.johnholbrook.vextm.sdPlugin/manifest.json
@@ -1,12 +1,12 @@
 {
     "SDKVersion": 2,
     "Author": "John Holbrook",
-    "CodePath": "./plugin_node/main-win.exe",
-    "CodePathMac": "./plugin_node/main-mac",
+    "CodePath": "./main-win.exe",
+    "CodePathMac": "./main-mac",
     "PropertyInspectorPath": "pi/pi.html",
     "Description": "Plugin for controlling VEX Tournament Manager",
     "Name": "VEX Tournament Manager",
-    "Version": "2.0.0",
+    "Version": "2.0.1",
     "Category": "VEX TM",
     "CategoryIcon": "images/category_icon",
     "URL": "https://github.com/johnholbrook/streamdeck-vextm",
